--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,87 @@
-/* No CSS *//*# sourceMappingURL=style.css.map */
+.main {
+  width: 100%;
+  font-family: Raleway;
+}
+
+.main .fresh {
+  width: 100%;
+  background-image: url("../images/background_1.png");
+  padding: 4% 8% 3% 8%;
+}
+
+.main .fresh__head {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.main .fresh__head img {
+  margin: -2% 0 0 4.5%;
+}
+
+.main .fresh__nav {
+  width: 50%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+}
+
+.main .fresh__nav a {
+  text-decoration: none;
+  text-transform: uppercase;
+  font-size: 16px;
+  font-weight: 700;
+  color: #262626;
+}
+
+.main .fresh__nav_home {
+  border-top: 3px solid #ff6033;
+  padding-top: 1%;
+  margin-top: -1.5%;
+}
+
+.main .fresh__body {
+  margin: 22% 0 0 5%;
+}
+
+.main .fresh__body h1 {
+  font-size: 60px;
+  font-weight: 900;
+  color: #262626;
+}
+
+.main .fresh__body p {
+  width: 30%;
+  font-size: 17px;
+  font-weight: 300;
+  color: #262626;
+  margin: -2% 0 2% 0%;
+}
+
+.main .fresh__body a {
+  width: 15%;
+  text-decoration: none;
+  font-size: 20px;
+  font-weight: 300;
+  color: #ffffff;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  text-align: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  background-color: #ff6033;
+  padding: 1%;
+}
+
+.main .fresh__scroll {
+  margin: 25% 0 0% 52%;
+}
+/*# sourceMappingURL=style.css.map */
