--- a/styles/style.scss
+++ b/styles/style.scss
@@ -81,5 +81,49 @@
             color: #ffffff;
         }
     }
-    
+    .services {
+        width: 100%;
+        display: flex;
+        background-image: url("../images/background_3.png");
+        @include backgroundImage;
+        padding: 10% 0% 10% 15%;
+        &__list_element {
+            display: flex;
+            justify-content: center;
+            text-align: center;
+            background-color: #ffffff;
+            box-shadow: 1px 1px 6px 2px rgba(0,0,0,0.3);
+            -webkit-box-shadow: 1px 1px 6px 2px rgba(0,0,0,0.3);
+            -moz-box-shadow: 1px 1px 6px 2px rgba(0,0,0,0.3);
+            margin-top: 5%;
+            & h5 {
+                height: 100px;
+                font-size: 20px;
+                font-weight: 700;
+                border-right: 1px solid #bababa;
+            }
+            &_online {
+                padding: 40px 85px 0 20px;
+            }
+            &_quality {
+                padding: 40px 98px 0 25px;
+            }
+            &_domestic {
+                width: 71%;
+                padding: 28px 7px 0 0;
+            }
+            &_well {
+                padding: 40px 103px 0 20px;
+            }
+            & img {
+                padding-left: 5%;
+            }
+        } 
+        & h1 {
+            font-size: 90px;
+            font-weight: 700;
+            color: #ffffff;
+            margin: 10% 0 0 15%;
+        } 
+    }
 }
