--- a/styles/style.css
+++ b/styles/style.css
@@ -85,7 +85,7 @@
 }
 
 .main .fresh__scroll {
-  margin: 25% 0 0% 52%;
+  margin: 20% 0 0% 52%;
 }
 
 .main .about {
@@ -170,5 +170,70 @@
   font-weight: 700;
   color: #ffffff;
   margin: 10% 0 0 15%;
+}
+
+.main .gallery {
+  width: 100%;
+  text-align: center;
+  background-image: url("../images/background_4.png");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  padding: 3% 3% 3% 3%;
+}
+
+.main .gallery h1 {
+  font-size: 90px;
+  font-weight: 700;
+}
+
+.main .gallery h5 {
+  width: 42%;
+  font-size: 17px;
+  font-weight: 300;
+  line-height: 1.5;
+  color: #262626;
+  margin: -3% auto 3% auto;
+}
+
+.main .gallery__line1 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.main .gallery__line1_second p {
+  margin: 0 0 4% 4%;
+}
+
+.main .gallery__line2 {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  margin-top: 0.5%;
+}
+
+.main .gallery__line2_photo5 {
+  margin-left: 3.5%;
+}
+
+.main .gallery a {
+  width: 13%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  text-decoration: none;
+  font-size: 20px;
+  font-weight: 300;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  color: #ffffff;
+  background-color: #5585a2;
+  padding: 1%;
+  margin: 2% auto 4% auto;
 }
 /*# sourceMappingURL=style.css.map */
