--- a/styles/style.scss
+++ b/styles/style.scss
@@ -60,7 +60,7 @@
             }
         }
         &__scroll {
-            margin: 25% 0 0% 52%;
+            margin: 20% 0 0% 52%;
 
         }
     }
@@ -125,5 +125,51 @@
             color: #ffffff;
             margin: 10% 0 0 15%;
         } 
+    }
+    .gallery {
+        width: 100%;
+        text-align: center;
+        background-image: url("../images/background_4.png");
+        @include backgroundImage;
+        padding: 3% 3% 3% 3%;
+        & h1 {
+            font-size: 90px;
+            font-weight: 700;
+        }
+        & h5 {
+            width: 42%;
+            font-size: 17px;
+            font-weight: 300;
+            line-height: 1.5;
+            color: #262626;
+            margin: -3% auto 3% auto;
+        }
+
+        &__line1 {
+            display: flex;
+            justify-content: center;
+            &_second p {
+                margin: 0 0 4% 4%;
+            }
+        }
+        &__line2 {
+            display: inline-flex;
+            margin-top: 0.5%;
+            &_photo5 {
+                margin-left: 3.5%;
+            }
+        }
+        & a {
+            width: 13%;
+            display: flex;
+            text-decoration: none;
+            font-size: 20px;
+            font-weight: 300;
+            justify-content: center;
+            color: #ffffff;
+            background-color: #5585a2;
+            padding: 1%;
+            margin: 2% auto 4% auto;
+        }
     }
 }
