--- a/styles/_mixins.scss
+++ b/styles/_mixins.scss
@@ -3,3 +3,39 @@
     background-position: center;
     background-repeat: no-repeat;
 }
+
+@mixin bilboardBlock {
+    width: 25%;
+                @include backgroundImage;
+                text-align: left;
+                padding: 2% 0% 2% 2%;
+                &_date {
+                    width: 18%;
+                    text-align: center;
+                    background-color: #26262671;
+                    border-radius: 5px;
+                    padding: 1%;
+                    & h2 {
+                        font-size: 32px;
+                        font-weight: 700;
+                        color: #ffffff;
+                    }
+                    & h3 {
+                        font-size: 21px;
+                        font-weight: 900;
+                        color: #ffffff;
+                        margin-top: -10%;
+                    }
+                }
+                & h4 {
+                    font-size: 20px;
+                    font-weight: 700;
+                    color: #ffffff;
+                    margin: 35% 0 5% 0;
+                }
+                & h5 {
+                    font-size: 13px;
+                    font-weight: 300;
+                    color: #ffffff;
+                }
+}
