--- a/styles/style.css
+++ b/styles/style.css
@@ -456,4 +456,104 @@
   padding: 1%;
   margin: 3% auto 0 auto;
 }
+
+.main .contact {
+  width: 100%;
+  text-align: center;
+  background-image: url("../images/background_7.png");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  padding: 1% 0% 8% 0%;
+}
+
+.main .contact h1 {
+  font-size: 90px;
+  font-weight: 700;
+}
+
+.main .contact p {
+  width: 25%;
+  font-size: 17px;
+  font-weight: 300;
+  margin: -3% auto 3% auto;
+}
+
+.main .contact__communication {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.main .contact__communication_form {
+  width: 60%;
+}
+
+.main .contact__communication_form input {
+  width: 60%;
+  font-size: 15px;
+  font-weight: 300;
+  color: #ffffff;
+  background-color: #00c4c463;
+  border: none;
+  padding: 2%;
+  margin: 1% 0;
+}
+
+.main .contact__communication_form textarea {
+  width: 60%;
+  font-size: 15px;
+  font-weight: 300;
+  color: #ffffff;
+  background-color: #00c4c463;
+  border: none;
+  padding: 2%;
+  margin: 1% 0;
+}
+
+.main .contact__communication_adress {
+  text-align: left;
+}
+
+.main .contact__communication_adress h3 {
+  font-size: 17px;
+  font-weight: 700;
+  margin-top: 4%;
+}
+
+.main .contact__communication_adress h4 {
+  font-size: 20px;
+  font-weight: 300;
+}
+
+.footer {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background-color: #262626;
+  padding: 2%;
+}
+
+.footer h4 {
+  font-size: 16px;
+  font-weight: 300;
+  color: #b9b9b9;
+}
+
+.footer h5 {
+  font-size: 15px;
+  font-weight: 300;
+  color: #b9b9b9;
+}
+
+.footer h5 span {
+  font-weight: 700;
+  color: #ff2b58;
+}
 /*# sourceMappingURL=style.css.map */
